crates/zefiro/src/shell/snapshots/zefiro__shell__presentation__tests__every_repo_theme_derives_its_own_palette@hacker.snap
---
source: crates/zefiro/src/shell/presentation.rs
expression: colors
---
Colors {
    background: Rgb(
        [
            11,
            12,
            22,
        ],
    ),
    window_background: Rgb(
        [
            18,
            20,
            31,
        ],
    ),
    foreground: Rgb(
        [
            221,
            247,
            255,
        ],
    ),
    accent: Rgb(
        [
            130,
            251,
            156,
        ],
    ),
    favorite: Rgb(
        [
            247,
            223,
            80,
        ],
    ),
    selection_foreground: Rgb(
        [
            221,
            247,
            255,
        ],
    ),
    selection_background: Rgb(
        [
            54,
            60,
            71,
        ],
    ),
    highlight: Rgb(
        [
            130,
            251,
            156,
        ],
    ),
    muted_foreground: Rgb(
        [
            142,
            149,
            184,
        ],
    ),
    bar_groove: Rgb(
        [
            74,
            83,
            93,
        ],
    ),
    spectrum: [
        Rgb(
            [
                46,
                194,
                126,
            ],
        ),
        Rgb(
            [
                247,
                223,
                80,
            ],
        ),
        Rgb(
            [
                255,
                95,
                120,
            ],
        ),
    ],
}
